refactor: make app compatible with Java8